--- a/html-css/module-03/extra task/extra task 01/css/style.css
+++ b/html-css/module-03/extra task/extra task 01/css/style.css
@@ -8,13 +8,19 @@ body {
 
 ul {
    align-items: center;
+   margin: 0;
+   padding: 0;
 }
 
 ul li {
    
    display: inline-block;
-   margin: 0 30px;
    
+   
+}
+
+ul li:not(:last-child) {
+   margin-right: 60px;
 }
 
 
