--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -25,10 +25,12 @@ h2 {
 .container {
    width: 900px;
    margin: 0 auto;
+   padding-top: 74px;
+   
 }
 
 .header {
-   margin-top: 74px;
+   
    margin-bottom: 100px;
 }
 
