--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -13,7 +13,7 @@ a {
    color: #000000;
 }
 
-a:hover {
+.nav_link a:hover {
    color: #1abc9c;
 }
 li {
@@ -23,15 +23,20 @@ body {
    font-size: 14px;
    font-family: "Open Sans", sans-serif;
 }
-
+.clearfix:after {
+   display: table;
+   content: "";
+   clear: both;
+}
 h1 {
    font-family: "Roboto", sans-serif;
    font-size: 48px;
    font-weight: 700;
    color: #555252;
    text-align: center;
-   letter-spacing: -1px;
-   margin-top: 70px;
+   letter-spacing: px;
+   margin: 0;
+   margin-bottom: 60px;
 }
 h1::after {
    display: block;
@@ -39,17 +44,18 @@ h1::after {
    content: "";
    border-bottom: 4px solid #1abc9c;
    margin-top: 25px;
-   margin-left: 42%;
+   margin-left: 43%;
 }
 
 h2 {
    font-family: "Roboto", sans-serif;
    font-size: 48px;
    font-weight: 700;
-   margin-top: 930px;
+   margin: 0;
    color: #555252;
    text-align: center;
    letter-spacing: -1px;
+   margin-bottom: 35px;
 }
 
 h2::after {
@@ -63,7 +69,6 @@ h2::after {
 
 .container {
    max-width: 1110px;
-   height: 100vh;
    margin: 0 auto;
 }
 
@@ -71,43 +76,50 @@ header {
    font-family: "Roboto", sans-serif;
    text-transform: uppercase;
    font-weight: 300;
-   margin-top: 36px;
+   margin-top: 35px;
 }
 .logo {
    font-size: 30px;
 }
 .logo_m {
    font-size: 30px;
+   font-weight: 700;
    color: #1abc9c;
 }
 .nav {
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
-   font-weight: 900;
+   font-weight: 700;
    text-transform: uppercase;
-
-   width: 475px;
-   margin: 0;
-   margin-top: -5px;
-   padding: 0;
    float: right;
+   margin-right: -10px;
 }
 .nav_list {
+   width: 475px;
+   margin: 10px;
+   padding: 0;
 }
 .nav_link {
-   float: left;
-   margin-left: 20px;
+   float: right;
+   margin-left: 33px;
+}
+.nav_link:last-child {
+   margin: 0;
 }
 .section {
+   margin-top: 100px;
    font-size: 0;
 }
 .product {
    width: 255px;
+   height: 372px;
    margin-top: 30px;
    margin-right: 70px;
    margin-left: -40px;
    float: left;
+   background-color: #333333;
 }
+
 .product:nth-child(4n + 4) {
    margin-right: 0px;
 }
@@ -116,7 +128,6 @@ header {
    width: 165px;
    margin: 0px;
    padding: 15px;
-   background: #323232;
    font-size: 18px;
    font-weight: 900;
    color: #ffffff;
@@ -126,17 +137,21 @@ header {
 .price_p {
    float: right;
    width: 30px;
-   background: #8c8c8c;
    margin: 0;
    padding: 15px;
    font-size: 18px;
    font-weight: 900;
    color: #ffffff;
+   background-color: rgba(255, 255, 255, 0.44);
 }
-.section ul li p:hover {
-   background: #7fd9c7;
+
+
+.product:hover  {
+   background-color: #1abc9c;
 }
+
 .section_2 {
+   margin-top: 100px;
 }
 .blog {
    margin-left: -40px;
@@ -169,10 +184,10 @@ header {
    border-bottom: 4px solid #1abc9c;
 }
 
-button {
+.button {
+   width: 90px;
    background: #4ec6ab;
    padding: 15px 40px;
-   border: 0px;
    border-radius: 3px;
 }
 
