--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -12,12 +12,16 @@ a {
    text-decoration: none;
    color: #000000;
 }
-
+ul {
+   padding: 0;
+   margin: 0;
+}
 .nav_link a:hover {
    color: #1abc9c;
 }
 li {
    list-style: none;
+   margin: 0;
 }
 body {
    font-size: 14px;
@@ -36,7 +40,7 @@ h1 {
    text-align: center;
    letter-spacing: px;
    margin: 0;
-   margin-bottom: 60px;
+   margin-bottom: 90px;
 }
 h1::after {
    display: block;
@@ -113,9 +117,9 @@ header {
 .product {
    width: 255px;
    height: 372px;
-   margin-top: 30px;
-   margin-right: 70px;
-   margin-left: -40px;
+   margin-top: 0px;
+   margin-right: 30px;
+   margin-left: 0px;
    float: left;
    background-color: #333333;
 }
